fix banner too high

--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -193,6 +193,7 @@
     display: flex;
     align-items: center;
     min-height: 450px;
+    max-height: 450px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
